--- a/resources/js/Components/rightBar/rightBar.scss
+++ b/resources/js/Components/rightBar/rightBar.scss
@@ -1,110 +1,107 @@
-@import "../../../css//style.scss";
-
-/* Import CSS */
-/* @import "../../../css/style.scss"; */
+@import "../../../css/style.scss";
 
 .rightBar {
-  /* Replace SCSS mixin with standard CSS properties */
-  flex: 3;
-  position: sticky;
-  top: 70px;
-  height: calc(100vh - 70px);
-  overflow: scroll;
-  //background-color: #theme-bgSoft;
-}
+    flex: 3;
+    position: sticky;
+    top: 70px;
+    height: calc(100vh - 70px);
+    overflow: scroll;
+    //background-color: themed("bgSoft");
+    //@include themify($themes) {
+    // flex: 3;
+    // position: sticky;
+    // top: 70px;
+    // height: calc(100vh - 70px);
+    // overflow: scroll;
+    // background-color: themed("bgSoft");
 
-/* Media Queries */
-@media only screen and (max-width: 768px) {
-  .rightBar {
-    display: none;
-  }
-}
+    @include mobile {
+        display: none;
+    }
+    @include tablet {
+        display: none;
+    }
 
-@media only screen and (max-width: 1024px) {
-  .rightBar {
-    display: none;
-  }
-}
+    &::-webkit-scrollbar {
+        display: none;
+    }
 
-.rightBar::-webkit-scrollbar {
-  display: none;
-}
+    .container {
+        padding: 20px;
 
-.rightBar .container {
-  padding: 20px;
-}
+        .item {
+            -webkit-box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.09);
+            -moz-box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.09);
+            box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.09);
+            padding: 20px;
+            margin-bottom: 20px;
+            //background-color: themed("bg");
 
-.rightBar .container .item {
-  -webkit-box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.09);
-  -moz-box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.09);
-  box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.09);
-  padding: 20px;
-  margin-bottom: 20px;
-  /* Replace SCSS themed function with specific values */
-  //background-color: #theme-bg;
+            span {
+                color: gray;
+            }
 
-  span {
-    color: gray;
-  }
+            .user {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                margin: 20px 0px;
 
-  .user {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: 20px 0px;
-  }
+                .userInfo {
+                    display: flex;
+                    align-items: center;
+                    gap: 20px;
+                    position: relative;
 
-  .user .userInfo {
-    display: flex;
-    align-items: center;
-    gap: 20px;
-    position: relative;
-  }
+                    img {
+                        width: 40px;
+                        height: 40px;
+                        border-radius: 50%;
+                        object-fit: cover;
+                    }
 
-  .user .userInfo img {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    object-fit: cover;
-  }
+                    .online {
+                        width: 12px;
+                        height: 12px;
+                        border-radius: 50%;
+                        background-color: limegreen;
+                        position: absolute;
+                        top: 0;
+                        left: 30px;
+                    }
 
-  .user .userInfo .online {
-    width: 12px;
-    height: 12px;
-    border-radius: 50%;
-    background-color: limegreen;
-    position: absolute;
-    top: 0;
-    left: 30px;
-  }
+                    // p {
+                    //     color: themed("textColorSoft");
+                    // }
 
-  .user .userInfo p {
-    //color: #theme-textColorSoft;
-  }
+                    span {
+                        font-weight: 500;
+                        //color: themed("textColor");
+                    }
+                }
 
-  .user .userInfo span {
-    font-weight: 500;
-    //color: #theme-textColor;
-  }
+                .buttons {
+                    display: flex;
+                    align-items: center;
+                    gap: 10px;
 
-  .user .buttons {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-  }
+                    button {
+                        border: none;
+                        padding: 5px;
+                        color: white;
+                        cursor: pointer;
 
-  .user .buttons button {
-    border: none;
-    padding: 5px;
-    color: white;
-    cursor: pointer;
-  }
+                        &:first-child {
+                            background-color: #5271ff;
+                        }
 
-  .user .buttons button:first-child {
-    background-color: #5271ff;
-  }
-
-  .user .buttons button:last-child {
-    background-color: #f0544f;
-  }
+                        &:last-child {
+                            background-color: #f0544f;
+                        }
+                    }
+                }
+            }
+        }
+    }
+    //}
 }
